tests/baselines/reference/privateNameSetterNoGetter(strict=true).errors.txt
privateNameSetterNoGetter.ts(2,9): error TS7032: Property '#x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
privateNameSetterNoGetter.ts(2,12): error TS7006: Parameter 'x' implicitly has an 'any' type.
privateNameSetterNoGetter.ts(4,9): error TS2806: Private accessor was defined without a getter.


==== privateNameSetterNoGetter.ts (3 errors) ====
    const C = class {
        set #x(x) {}
            ~~
!!! error TS7032: Property '#x' implicitly has type 'any', because its set accessor lacks a parameter type annotation.
               ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        m() {
            this.#x += 2; // Error
            ~~~~~~~
!!! error TS2806: Private accessor was defined without a getter.
        }
    }
    
    console.log(new C().m());
    